api endpoint change use '/'

--- a/controller/views/states.ejs
+++ b/controller/views/states.ejs
@@ -214,7 +214,7 @@
 	
 
 	<center><h1>World Status</h1>
-		<form action="/countries">
+		<form action="/">
 			<input type="submit", name="country"  value="Countries">
 		</form><br>
 	</center>
